--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Numerical calculation of String type(String类型的数值计算)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/song52wow/number-process/issues"
   },
-  "homepage": "https://github.com/song52wow/number-process#readme"
+  "homepage": "https://github.com/song52wow/number-process#readme",
+  "devDependencies": {
+    "jest": "^25.3.0"
+  }
 }
