--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Numerical calculation of String type(String类型的数值计算)",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
@@ -31,6 +32,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.3.0",
+    "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   }
 }
