--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "jest": "^25.3.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "tag": "beta"
+}
 }
