--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calculator-string",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "Numerical calculation of String type(String类型的数值计算)",
   "main": "index.js",
   "scripts": {
@@ -38,5 +38,5 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "tag": "beta"
-}
+  }
 }
