update npm config

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "tag": "beta",
-    "access": "public"
+    "tag": "beta"
   }
 }
