update package config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "publish:preminor": "npm version preminor && npm publish",
+    "publish:preminor": "npm version preminor && npm publish --access public",
     "publish:patch": "npm version patch && npm publish",
     "publish:minor": "npm version minor && npm publish",
     "publish:mmajor": "npm version mmajor && npm publish"
