--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "test": "jest",
-    "publish:preminor": "npm version preminor && npm publish",
-    "publish:patch": "npm version patch && npm publish",
-    "publish:minor": "npm version minor && npm publish",
-    "publish:mmajor": "npm version mmajor && npm publish"
+    "publish:patch": "npm run build && npm version patch && npm publish",
+    "publish:minor": "npm run build && npm version minor && npm publish",
+    "publish:mmajor": "npm run build && npm version mmajor && npm publish"
   },
   "repository": {
     "type": "git",
